kubernetes/pinkpanther-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pinkpanther-pod
  labels:
    app: pinkpanther
spec:
  containers:
  - name: pinkpanther-container
    image: nginx
    ports:
    - containerPort: 80
