kubernetes/rahul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rahul-ingress
spec:
  rules:
  - host: rahulcloud.local
    http:
      paths:
      - path: /cloud
        pathType: Prefix
        backend:
          service:
            name: rahul-cloud
            port:
              number: 80
      - path: /software
        pathType: Prefix
        backend:
          service:
            name: rahul-software
            port:
              number: 80
